--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.383.0",
     "next": "14.2.24",
     "next-themes": "^0.3.0",
